Projekteinstellungen auf Java8 geändert. Umbenennung der config.js in ckeditor_config.js und Einbindung als customConfig aufgrund von Problemen mit Firefox. Toolbar-Funktionen aktiviert.

--- a/src/main/resources/resources/ckeditor.html
+++ b/src/main/resources/resources/ckeditor.html
@@ -3,6 +3,7 @@
 <head>
   <script type="text/javascript" src="./ckeditor.js"></script>
   <script type="text/javascript">
+  	CKEDITOR.config.customConfig = 'ckeditor_config.js';
     rap = {};
     rap.init = false;
     rap.createEditor = function() {
